# Pi-LAN

./: .env.example  LICENSE  README.md  pyproject.toml
app/: __init__.py  config.py  deps.py  main.py
app/api/: __init__.py  admin.py  clients.py  diagnostics.py  games.py  router.py
app/games/: __init__.py  catalog.py  checksum.py  indexer.py
app/net/: __init__.py  iperf.py  neigh.py  ping.py  ports.py
app/services/: __init__.py  diagnostics.py  discovery.py  scheduler.py
app/store/: __init__.py  db.py  models.py  repo.py
app/util/: __init__.py  format.py  rate_limit.py  shell.py
app/web/: __init__.py  pages.py
app/web/static/: main.css  main.js
app/web/templates/: base.html  clients.html  diagnostics.html  games.html  index.html
scripts/: dev_run.sh  pi_install.sh
systemd/: lanhub.service
tests/: test_parse_neigh.py  test_parse_ping.py
tests/fixtures/: ip_neigh.txt  ping_loss.txt  ping_ok.txt
